[tool.poetry]
name = "discordpy-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
aiofiles = "^0.6.0"
bs4 = "^0.0.1"
dblpy = "^0.4.0"
wolframalpha = "^5.0.0"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
